--- a/templates/login.html
+++ b/templates/login.html
@@ -57,7 +57,7 @@
       </form>
 
       <div class="text-center mt-3">
-        <small class="text-muted">Having trouble? <a href="https://www.drdo.gov.in/drdo/labs-and-establishments/solid-state-physics-laboratory-sspl">Contact support</a></small>
+        <small class="text-muted">Having trouble? <a href="https://www.drdo.gov.in/drdo/labs-and-establishments/solid-state-physics-laboratory-sspl" target="_blank">Contact support</a></small>
       </div>
     </div>
   </div>
