--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark navbar-gradient mb-4">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="{{ url_for('dashboard') }}">
-        <img src="static/drdo_logo_0.png" alt="Logo" style="height: 60px; margin-right: 10px;">
+        <img src="static/login-icons.png" alt="Logo" style="height: 60px; margin-right: 10px;">
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
