--- a/templates/logs.html
+++ b/templates/logs.html
@@ -26,4 +26,7 @@
 {% else %}
 <p>No logs to show.</p>
 {% endif %}
+
+<a href="{{ url_for('dashboard') }}" class="btn btn-secondary mt-3 mb-4">Back to Database</a>
+
 {% endblock %}
