--- a/templates/modify_search.html
+++ b/templates/modify_search.html
@@ -45,6 +45,6 @@
       <p>No projects found matching your query.</p>
     {% endif %}
   {% endif %}
-  <a href="{{ url_for('dashboard') }}" class="btn btn-secondary mt-3">Back to Dashboard</a>
+  <a href="{{ url_for('dashboard') }}" class="btn btn-secondary mt-3">Back to Database</a>
 </div>
 {% endblock %}
