--- a/templates/partials/project_table_body.html
+++ b/templates/partials/project_table_body.html
@@ -12,6 +12,7 @@
     <td>{{ project.original_pdc }}</td>
     <td>{{ project.revised_pdc }}</td>
     <td>{{ project.stakeholders }}</td>
+    <td>{{ project.scope_objective or '' }}</td>
     <td>{{ project.expected_deliverables }}</td>
     <td>{{ project.Outcome_Dovetailing_with_Ongoing_Work }}</td>
 
@@ -148,6 +149,14 @@
       {% endif %}
     </td>
     <td>{{ project.administrative_status }}</td> 
+    <td>
+      {% if project.final_closure_date %}
+        <div><strong>Date:</strong> {{ project.final_closure_date.strftime('%Y-%m-%d') }}</div>
+      {% endif %}
+      {% if project.final_closure_remarks %}
+        <div><strong>Remarks:</strong> {{ project.final_closure_remarks }}</div>
+      {% endif %}
+    </td> 
     {% if current_user.role == 'admin' %}
       <td>
         <a href="{{ url_for('edit_project', project_id=project.id) }}" class="btn btn-sm btn-warning">Edit</a>
