--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
       word-wrap: break-word;
     }
     .wide-col4 {
-      min-width: 140px;
+      min-width: 160px;
       max-width: 400px;
       white-space: pre-wrap;
       word-wrap: break-word;
@@ -226,13 +226,14 @@
             <th class="wide-col2">Outcome Dovetailing with Ongoing Work</th>
             <th class="wide-col3">RAB Meeting Scheduled Date</th>
             <th class="wide-col3">RAB Meeting Held Date</th>
-            <th class="wide-col4">RAB Minutes of Meeting</th>
+            <th class="wide-col3">RAB Minutes of Meeting</th>
             <th class="wide-col3">GC Meeting Scheduled Date</th>
             <th class="wide-col3">GC Meeting Held Date</th>
-            <th class="wide-col4">GC Minutes of Meeting</th>
+            <th class="wide-col3">GC Minutes of Meeting</th>
             <th class="wide-col5">Technical Status</th>
             <th>Administrative Status</th>
             <th class="wide-col1">Final Closure Status</th>
+            <th class="wide-col4">Final Report</th>
             {% if current_user.role == 'admin' %}
               <th>Actions</th>
             {% endif %}
